--- a/MagicSearch/res/menu/main.xml
+++ b/MagicSearch/res/menu/main.xml
@@ -1,9 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/menuWebscrapping"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:title="initiate webscraping"/>
+    
+    <item
+        android:id="@+id/menuShowdata"
+        android:orderInCategory="200"
+        android:showAsAction="never"
+        android:title="show data"/>
 
 </menu>
