--- a/MagicSearch/res/layout/swipe_fragment.xml
+++ b/MagicSearch/res/layout/swipe_fragment.xml
@@ -256,6 +256,30 @@
 		    android:orientation="horizontal" >
 		    
 		    <TextView
+		        android:id="@+id/loyaltyHead"
+		        android:layout_width="0dp"
+		        android:layout_weight="0.7"
+		        android:layout_height="wrap_content"
+		        android:text="Loyalität"
+		        android:layout_gravity="left"
+		        android:background="#88FF0000"/>
+		    <TextView
+		        android:id="@+id/loyaltyOut"
+		        android:layout_width="0dp"
+		        android:layout_weight="1.3"
+		        android:layout_height="wrap_content"
+		        android:layout_gravity="right" 
+		        android:background="#8800FF00"/>
+		
+		</LinearLayout>
+		
+		<LinearLayout
+		    android:id="@+id/linearLayoutRow12"
+		    android:layout_width="fill_parent"
+		    android:layout_height="wrap_content"
+		    android:orientation="horizontal" >
+		    
+		    <TextView
 		        android:id="@+id/expansionHead"
 		        android:layout_width="0dp"
 		        android:layout_weight="0.7"
@@ -274,7 +298,7 @@
 		</LinearLayout>
 		
 		<LinearLayout
-		    android:id="@+id/linearLayoutRow12"
+		    android:id="@+id/linearLayoutRow13"
 		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
 		    android:orientation="horizontal" >
@@ -298,7 +322,7 @@
 		</LinearLayout>
 		
 		<LinearLayout
-		    android:id="@+id/linearLayoutRow13"
+		    android:id="@+id/linearLayoutRow14"
 		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
 		    android:orientation="horizontal" >
@@ -322,7 +346,7 @@
 		</LinearLayout>
 		
 		<LinearLayout
-		    android:id="@+id/linearLayoutRow14"
+		    android:id="@+id/linearLayoutRow15"
 		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
 		    android:orientation="horizontal" >
